--- a/pokemon.html
+++ b/pokemon.html
@@ -19,24 +19,15 @@
         <h2>Fight for the glory</h2>
       </div>
     </div>
-    <div class="pokedex">
-      <dl class ="pikachu">
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" width="200" height="200" alt="">
-        <dt>Name:</dt>
-        <dd id="pikachuName"> </dd>
+    <!-- Pokedex -->
 
-      </dl>
-      <dl class="balbasur">
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/1.png" width="200" height="200"alt="">
-        <dt>Name:</dt>
-        <dd id="balbasaurName"></dd>
-      </dl>
-    </div>
+    <ul id="pokedex">
+
+    </ul>
       <div class="battleGround">
         <img src="./img/trainer_battles_arena.jpg" alt="">
       </div>
       </div>
-      <!-- Pokedex -->
 
     </div>
   </body>
