--- a/pokemon.html
+++ b/pokemon.html
@@ -19,13 +19,12 @@
         <h2>Fight for the glory</h2>
       </div>
     </div>
-    <!-- Pokedex -->
+    <!-- pokemon list -->
+    <div id="list">
 
-    <ul id="pokedex">
-
-    </ul>
-      <div class="battleGround">
-        <img src="./img/trainer_battles_arena.jpg" alt="">
+    </div>
+  <div class="battleGround">
+        <img src="./img/pokemon-stadium-royale_feature.jpg" alt="stadiumZ">
       </div>
       </div>
 
