--- a/pokemon.html
+++ b/pokemon.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title></title>
+    <title>Pokemon</title>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="app.js" charset="utf-8"></script>
   </head>
@@ -16,16 +17,43 @@
           <img src="./img/20997.jpg" alt="pokemon">
         <div class="text-wrap">
         <img src="./img/download (1).png" alt="">
-        <h2>Fight for the glory</h2>
+        <h2>Gotta catch 'em all</h2>
       </div>
     </div>
-    <!-- pokemon list -->
+
+    <div class="pics">
+          <img src="./img/21018.jpg" alt="pokemon1">
+          <img src="./img/21010.jpg" alt="pokemon2">
+          <img src="./img/20993.jpg" alt="pokemon3">
+          <img src="./img/20999.jpg" alt="pokemon4">
+          <img src="./img/21005.jpg" alt="pokemon5">
+          <img src="./img/20994.jpg" alt="pokemon6">
+          <img src="./img/21025.jpg" alt="pokemon7">
+          <img src="./img/20996.jpg" alt="pokemon8">
+          <img src="./img/21000.jpg"alt="pokemon9">
+          <img src="./img/21007.png" alt="pokemon10">
+          <img src="./img/21008.jpg" alt="pokemon11">
+          <img src="./img/21004.jpg" alt="pokemon12">
+          <img src="./img/21016.jpg" alt="pokemon13">
+          <img src="./img/21017.jpg" alt="pokemon14">
+          <img src="./img/21022.jpg" alt="pokemon15">
+          <img src="./img/21024.jpg" alt="pokemon16">
+          <img src="./img/11912.jpg" alt="pokemon17">
+        </div>
+
+      <div class="gallery">
+        <h2>POKEMON GALLERY</h2>
+      </div>
+      <!-- <form>
+              <input type="text" placeholder="Pokemon Name"/>
+              <input type="submit" value ="Open Pokeball" />
+          </form> -->
+    <!-- pokemon list generated from ajax-->
+
     <div id="list">
 
     </div>
-  <div class="battleGround">
-        <img src="./img/pokemon-stadium-royale_feature.jpg" alt="stadiumZ">
-      </div>
+
       </div>
 
     </div>
