--- a/pokemon.html
+++ b/pokemon.html
@@ -47,8 +47,8 @@
     <!-- pokemon list generated from ajax-->
     <div id="list">
 
-    </div>
-
+    </div class = btn>
+  <button class = next >Next</button>
       </div>
 
     </div>
