--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="list.css">
-    <title></title>
+    <title>Pokemon List</title>
       <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="list.js" charset="utf-8"></script>
   </head>
@@ -13,6 +13,12 @@
     </div>
      <div id="list">
 
+     </div>
+   </div class = btn>
+ </div class = btn>
+ <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/pokemon.html"><button>previous</button>
+   </div>
+   <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/index.html" target="_blank"><button>Next</button>
      </div>
   </body>
 </html>
