--- a/pokemon.html
+++ b/pokemon.html
@@ -48,7 +48,7 @@
     <div id="list">
 
     </div class = btn>
-  <button class = next >Next</button>
+    <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/index.html" target="_blank"><button>Next</button>
       </div>
 
     </div>
