--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <link rel="stylesheet" href="list.css">
     <title>Pokemon List</title>
@@ -8,6 +9,7 @@
     <script src="list.js" charset="utf-8"></script>
   </head>
   <body>
+
     <div class="gallery">
       <h2>POKEMON GALLERY</h2>
     </div>
@@ -16,9 +18,8 @@
      </div>
    </div class = btn>
  </div class = btn>
- <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/pokemon.html"><button>previous</button>
-   </div>
-   <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/index.html" target="_blank"><button>Next</button>
+ <h2>For more pokemon gallery click <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/index.html" target="_blank"><button>Next</button>
+ </a></h2>
      </div>
   </body>
 </html>
