Pokemon world complete

--- a/pokemon.html
+++ b/pokemon.html
@@ -38,7 +38,7 @@
           <img src="./img/21008.jpg" alt="pokemon11">
           <img src="./img/21004.jpg" alt="pokemon12">
           <img src="./img/21016.jpg" alt="pokemon13">
-          <img src="./im/21017.jpg" alt="pokemon14">
+          <img src="./img/21017.jpg" alt="pokemon14">
           <img src="./img/21022.jpg" alt="pokemon15">
           <img src="./img/21024.jpg" alt="pokemon16">
           <img src="./img/11912.jpg" alt="pokemon17">
