--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <link rel="stylesheet" href="list.css">
@@ -16,10 +17,25 @@
      <div id="list">
 
      </div>
-   </div class = btn>
- </div class = btn>
- <h2>For more pokemon gallery click <a href = "file:///Users/ricky/Desktop/dev/Pokemon-app/index.html" target="_blank"><button>Next</button>
- </a></h2>
+
+     <div id = "footer">
+       <div>
+         <ul>
+           <li class = about><a href ="#">About us</a></li>
+           <li class = about><a href ="#">Customer Service</a></li>
+           <li class = about><a href ="#">Terms of Use</a></li>
+           <li class = about><a href ="#">FAQ</a></li>
+
+         </ul>
+        <div class="social">
+          <!-- w#schools.com -->
+          <h3>follow us on</h3>
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-instagram"></a>
+           <a href="#" class="fa fa-youtube"></a>
+        </div>
+       </div>
      </div>
   </body>
 </html>
