--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </div>
     <div class = btn>
-      <h2>For more pokemon gallery click <a href = "file:///./gallery/index.html" target="_blank"><button>Next</button>
+      <h2>For more pokemon gallery click <a href = "https://github.com/rickyshah692/rickyshah692.github.io/blob/master/gallery/index.html" target="_blank"><button>Next</button>
       </a></h2>
     </div>
     <div id = "footer">
