--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </div>
     <div class = btn>
-      <h2>For more pokemon gallery click <a href = "./gallery/gallery.html" target="_blank"><button>Next</button>
+      <h2>For more pokemon gallery click <a href = "gallery.html" target="_blank"><button>Next</button>
       </a></h2>
     </div>
     <div id = "footer">
