--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="world">
-      <h2>Pokemon World</h2>
+      <h2>Poke World</h2>
     </div>
     <div class="pics">
           <img src="./img/21018.jpg" alt="pokemon1">
@@ -44,10 +44,10 @@
           <img src="./img/11912.jpg" alt="pokemon17">
       </div>
       <div class="picDesc">
-        <h2>For more awesome pokemon world click on the image =></h2>
+        <h2>For more awesome poke world click on the image =></h2>
       </div>
       <div class="gallery">
-        <h2>POKEMON GALLERY</h2>
+        <h2>POKE GALLERY</h2>
       </div>
     <!-- pokemon list generated from ajax-->
     <div id="list">
@@ -60,16 +60,16 @@
     <div id = "footer">
       <div>
         <ul>
-          <li class = about><a href ="#">About us</a></li>
-          <li class = about><a href ="#">Customer Service</a></li>
-          <li class = about><a href ="#">Terms of Use</a></li>
-          <li class = about><a href ="#">FAQ</a></li>
+          <a href ="#">About us</a></li>
+          <a href ="#">Customer Service</a></li>
+          <a href ="#">Terms of Use</a></li>
+          <a href ="#">FAQ</a></li>
 
         </ul>
+        <h3>follow us on</h3>
        <div class="social">
          <!-- w#schools.com -->
-         <h3>follow us on</h3>
-         <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-facebook"></a>
          <a href="#" class="fa fa-twitter"></a>
          <a href="#" class="fa fa-instagram"></a>
           <a href="#" class="fa fa-youtube"></a>
