--- a/gallery.html
+++ b/gallery.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- social media icons -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+      <!-- lobster font link -->
+      <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+<!-- shadow into light font link -->
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="list.css">
+
+    <link rel="stylesheet" href="gallery.css">
     <title>Pokemon List</title>
       <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="list.js" charset="utf-8"></script>
+    <script src="gallery.js" charset="utf-8"></script>
   </head>
   <body>
 
     <div class="gallery">
-      <h2>POKEMON GALLERY</h2>
+      <h2>POKE GALLERY</h2>
     </div>
      <div id="list">
 
@@ -21,15 +26,16 @@
      <div id = "footer">
        <div>
          <ul>
-           <li class = about><a href ="#">About us</a></li>
-           <li class = about><a href ="#">Customer Service</a></li>
-           <li class = about><a href ="#">Terms of Use</a></li>
-           <li class = about><a href ="#">FAQ</a></li>
+           <a href ="#">About us</a></li>
+           <a href ="#">Customer Service</a></li>
+           <a href ="#">Terms of Use</a></li>
+           <a href ="#">FAQ</a></li>
 
          </ul>
+         <h3>follow us on</h3>
         <div class="social">
           <!-- w#schools.com -->
-          <h3>follow us on</h3>
+
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
           <a href="#" class="fa fa-instagram"></a>
